<resources>
    <string name="app_name">Covid19 Tracker</string>
    <string name="add_employee_title">Add Employee</string>
    <string name="username_token">Username</string>
    <string name="password_token">Password</string>
    <string name="enter_username">The username should\'nt exceed 8 chars</string>
    <string name="enter_password">The password should be at-least 8 chars and maximum 14</string>
    <string name="toast_length_user_pass">Username: Min 4 chars &amp; Max 14\nPassword: Min 8 &amp; Max 14</string>
    <string name="toast_user_succ_added">User has been successfully added.</string>
    <string name="toast_user_already_exists">User already exists!</string>
    <string name="toast_op_failed">Operation failed</string>
    <string name="add">Add</string>
    <string name="enter_employee_name">Enter Employee Name</string>
    <string name="token_not_applicable">n/a</string>
    <string name="title_employees_status">Employees Status</string>
    <string name="feed_news">Feed News</string>
    <string name="new_post">New Post</string>
    <string name="post">POST</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="fields_cant_empty">Fields can\'t be empty</string>
    <string name="update_post_token">Update Post</string>
    <string name="post_update_token">Post Update</string>
    <string name="token_parcel">parcel</string>
    <string name="cant_update_post">Something went wrong, couldn\'t update the post!</string>
    <string name="post_update">Post Updated!</string>
    <string name="succ_added_post">Posted!!</string>
    <string name="post_failed">POST failed!</string>
    <string name="delete_feed_succ">Delete Feed Item Successful</string>
    <string name="del_item_feed_failed">Delete Feed Item Failed</string>
    <string name="parcel">parcel</string>
    <string name="num_working_from_home">Engineers working from home %d</string>
    <string name="num_working_on_client_site">Engineers working on client site %d</string>

    <!-- Health Status-->
    <string name="health_normal">Normal %d</string>
    <string name="health_infected">Infected %d</string>
    <string name="health_observation">Under Observation %d</string>
    <string name="home">Home</string>

    <string name="manager">Manager</string>

    <string name="engineer">Engineer</string>

    <string name="customer">Customer</string>

    <string name="add_login_title">Covid-19 Status Tracking</string>

    <string name="enter_user_id">Enter User Id</string>

    <string name="login">Login</string>

    <string name="user_name_title">UserName</string>

    <string name="personal_status">Personal Status</string>

    <string name="customer_status">Customer Status</string>

    <string name="family_status">Family Status</string>

    <string name="submit">Submit</string>

    <string name="enter_user_name">Enter user name</string>

    <string name="role_token">Role</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="enginner_home_page">Engineer Home Page</string>
    <string name="home_page">Home</string>
    <string name="sumary_count">Summary Count at Working Place</string>
    <string name="sumary_personal_status">Summary Personal Status</string>
    <string name="overall_status">Overall Status</string>
    <string name="users_list">Users list</string>
    <string name="add_user_title">Add User</string>
    <string name="employee_management">Employee Management</string>
    <string name="summary_count_of_workplace">Summary Count of Workplace</string>
    <string name="summary_personal_status">Summary Personal Status</string>
    <string name="feed">Feed</string>
    <string name="covid_19_status_tracking_service_thailand">COVID-19 Status Tracking Service Thailand</string>
    <string name="working_place">Working Place</string>
    <string name="save">SAVE</string>
    <string name="tick_if_your_client">Tick if your client</string>
    <string name="clients">Clients</string>
    <string name="title_user_status">Users Status</string>
    <string name="location_not_provided">Location not provided</string>
    <string name="emp_assigned">Employees Assigned</string>

</resources>
