<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/covid_19_status_tracking_service_thailand"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/mediumTurquoise"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <LinearLayout
        android:id="@+id/credential_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.49">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/username_token"
            android:textColor="@color/mediumTurquoise"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints="Enter the username in ascii"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:maxLength="14"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/password_token"
            android:textColor="@color/mediumTurquoise"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints="Enter the password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="14"
            android:textSize="18sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/mediumTurquoise"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>