<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:orientation="vertical"
xmlns:tools="http://schemas.android.com/tools">

<androidx.cardview.widget.CardView
    android:id="@+id/header_bar"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    app:cardBackgroundColor="@color/mediumTurquoise"
    app:cardElevation="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/home_page"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>



    <include
        android:id="@+id/layout_sumary_engineer_status"
        layout="@layout/item_card_engineer_status" />

    <include
        android:id="@+id/layout_sumary_engineer_health_status"
        layout="@layout/item_card_engineer_health_status" />

    <Button
        android:id="@+id/btn_overall_status"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/mediumTurquoise"
        android:padding="20dp"
        android:text="@string/employee_management"
        android:textSize="20sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btn_feed_news"
        android:background="@color/mediumTurquoise"
        android:text="@string/feed_news"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_margin="20dp"
        />


</LinearLayout>